test/errors/equ2.input.asm

* = $801

irqline0 = 13

    lda #xyzzy
